--- a/p/pr/pro/prospectiv.com.html
+++ b/p/pr/pro/prospectiv.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the prospectiv.com privacy policy that was archived on 2013-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131201015816id_/http%3A//www.prospectiv.com/Prospectiv_Privacy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the prospectiv.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216145244id_/http%3A//www.prospectiv.com/Prospectiv_Privacy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Prospectiv - Online Marketing Services for Advertisers and Publishers</title>
@@ -174,14 +174,22 @@ Prospectiv
 </tbody></table>
 
 
-
-<table width="800" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr bgcolor="F0C075">
-    <td height="1" colspan="2"><img src="http://images.eversave.com/Images/prospectiv/images/spacer.gif" width="100%" height="1"></td>
-</tr>
-<tr>
-    <td height="23"><span class="bodytext"><font color="#489A9B">&nbsp;©&nbsp;Prospectiv
-    2013 | <a href="contact.jsp">Contact </a> | 781-305-2100 | <a href="privacypolicy.jsp">Privacy Policy </a></font></span></td>
+<table width="990" border="0" align="center" cellpadding="6" cellspacing="0">
+<tbody><tr>
+    <td align="center" valign="middle" style="color:#650360;"><br>© Prospectiv
+    <script language="JavaScript" type="text/javascript">
+    <!--                                                                                                                                                                                                                          
+        document.write(new Date().getFullYear())                                                                                                                                                                              
+     -->
+    </script>2020
+    &nbsp;&nbsp;|&nbsp;&nbsp;<a href="Prospectiv_Privacy.jsp">Privacy Policy</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="Prospectiv_Contact_Us.jsp">
+    Contact Us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="Prospectiv_Careers.jsp">Careers</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.affiniongroup.com/" target="_blank">
+    An Affinion Group Company</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://reports.prospectiv.com/PublisherLogin.jsp" target="_blank">
+    Publisher Login</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://axis.prospectiv.com" target="_blank">
+    Advertiser Login</a><br>
+    <br>
+    <br>
+    </td>
 </tr>
 </tbody></table>
 
