--- a/p/pe/per/perfectplaces.com.html
+++ b/p/pe/per/perfectplaces.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the perfectplaces.com privacy policy that was archived on 2013-08-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130815092509id_/http%3A//www.perfectplaces.com/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the perfectplaces.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216163255id_/http%3A//www.perfectplaces.com/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta http-equiv="Content-Type" content="text/html;">
 <title>Perfect Places Privacy Notice | PerfectPlaces.com</title>
 <meta name="description" content="Perfect Places Privacy Notice">
 <meta http-equiv="expires" content="never">
@@ -56,18 +56,18 @@ td.scwFoot  {padding:0px;text-align:center;font-weight:normal;color:#000000;}
 			
 			<table cellpadding="0" cellspacing="0" border="0">
 			 <tbody><tr>
-			  <td valign="middle" bgcolor="#E1E1FF"><a href="http://www.facebook.com/PerfectPlaces"><img src="/images/facebook-icon-home_trans.gif" width="17" height="18" border="0" style="padding:0px 6px 0px 6px;" alt=""></a></td>
-			  <td bgcolor="#E1E1FF"><a href="http://twitter.com/PerfectPlaces"><img src="/images/twitter-icon-home_trans.gif" width="17" height="18" border="0" style="padding: 0px 12px 0px 6px;" alt=""></a></td>
-			  <td style="padding-right:5px;" bgcolor="#E1E1FF">
-				<img src="/images/translation_trans.gif" alt="View Vacation Rentals in English, French, German, Italian, Portuguese and Chinese (Traditional)" width="250" height="20" border="0" usemap="#m_translation">
-			  </td>
+			  
+
+			  <td valign="middle"><a href="http://www.facebook.com/PerfectPlaces"><img src="/images/facebook-icon-home-sm.gif" width="22" height="22" border="0" style="padding:0px 6px 0px 6px;" alt=""></a></td>
+			  <td><a href="http://twitter.com/PerfectPlaces"><img src="/images/twitter-icon-home-sm.gif" width="22" height="22" border="0" style="padding: 0px 4px 0px 6px;" alt=""></a></td>
+			  <td style="padding-right:5px; height:20px;"></td>
 			 <td>
 				<div style="float:left; padding-right:5px; padding-left:5px;">
 					<g:plusone size="medium" annotation="none"></g:plusone>					
 				</div>
 				<div id="fb-button-classic" style="float:left;">
 
-						<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2FPerfectPlaces&amp;layout=button_count&amp;show_faces=false&amp;width=97&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:82px; height:21px;" allowtransparency="true"></iframe>
+						<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2FPerfectPlaces&amp;layout=button_count&amp;show_faces=false&amp;width=97&amp;action=like&amp;font=arial&amp;colorscheme=light&amp;height=22" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:82px; height:22px;" allowtransparency="true"></iframe>
 				</div>
 			 </td>
 			  <td style="padding-left:5px; padding-right:5px;">
@@ -325,7 +325,7 @@ revised: February 9, 2010
     <div class="footer">
     	<a href="/aboutus.cfm">About Us</a>    <a href="/TravelServices.cfm">Travel Services</a> 	  <a href="/affiliates/">Become an Affiliate</a> 	<a href="/links/">Resources</a> 	<a href="/sitemap.cfm">Sitemap</a>
              <a href="/privacy.cfm">Privacy Statement</a>   <a href="/terms_pp.cfm">Terms of Use</a><br>
-		© 1996 - 2013 Perfect Places, Inc. All rights reserved. <a href="/contactus.cfm">Contact Customer Service</a>
+		© 1996 - 2014 Perfect Places, Inc. All rights reserved. <a href="/contactus.cfm">Contact Customer Service</a>
     </div>
 </div> 
 <script type="text/javascript">
