--- a/i/is/ist/istockanalyst.com.html
+++ b/i/is/ist/istockanalyst.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the istockanalyst.com privacy policy that was archived on 2013-11-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131102211317id_/http%3A//www.istockanalyst.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the istockanalyst.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216163332id_/http%3A//istockanalyst.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"><head><title>
 	Privacy Policy : iStockAnalyst.com
@@ -43,11 +43,11 @@
 
     <form name="aspnetForm" method="post" action="/privacy.aspx" id="aspnetForm">
 <div>
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPaA8FDzhkMGE2MDVjZTU4ZTZlMGR8eOiQrYEuZ3uxfEfIoWTiJfr1YQ==">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPaA8FDzhkMGY5MjIwZGRmN2JhMmSnQ70+Tyu4a4GZ/K5BnSaxiqS0RQ==">
 </div>
 
 
-<script src="/ScriptResource.axd?d=fKZyq_tDShlWclFdrHjGNGko7RSEHWJ5lgmAUlaj5-lJAt-6kUpfDWyKllL77xDIugUdGcs7WFCK-xNqnmCIPcoEcnPNcR-IMSFlFVaeMVrIj9iJpP2YvO8FPAl_ma8wPY3cXqgC9rRpWm3SDts_n0wPOUw1&amp;t=ffffffffb1d92ec6" type="text/javascript"></script>
+<script src="/ScriptResource.axd?d=fKZyq_tDShlWclFdrHjGNGko7RSEHWJ5lgmAUlaj5-lJAt-6kUpfDWyKllL77xDIugUdGcs7WFCK-xNqnmCIPcoEcnPNcR-IMSFlFVaeMVrIj9iJpP2YvO8FPAl_ma8wPY3cXqgC9rRpWm3SDts_n0wPOUw1&amp;t=fffffffff98cfb72" type="text/javascript"></script>
     
     <div class="topwrap">
         <div class="twinner">
@@ -109,7 +109,7 @@
                                     Two Week FREE Trial
                                 </h3>
                                 <br>
-                                <a href="https://www.istockanalyst.com/premium/ionmarket.html">
+                                <a href="https://secure.istockanalyst.com/premium/ionmarket.html">
                                     <img src="/images/signup.gif" alt="Signup for Technical Trade of the Day">
                                 </a>
                                 <div style="clear: both;">
