--- a/f/fu/fus/fusionbposervices.com.html
+++ b/f/fu/fus/fusionbposervices.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fusionbposervices.com privacy policy that was archived on 2013-09-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130907212540id_/http%3A//www.fusionbposervices.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fusionbposervices.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216164405id_/http%3A//www.fusionbposervices.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -8,7 +8,7 @@
 
 <link href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300" rel="stylesheet" type="text/css">
 
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" charset="utf-8" src="//cdn.zopim.com/?Z5uv6lLqpVZu9Dwr7L67p1oaA6TQhOsa" type="text/javascript"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://apis.google.com/js/plusone.js"></script>
 <link rel="shortcut icon" href="favicon.ico">
 <script language="JavaScript" type="text/javascript">
 
@@ -84,7 +84,7 @@ function chkNumeric(strString) {
 
 
 
-<!--Start of Zopim Live Chat Script-->
+<!--Start of Zopim Live Chat Script
 <script type="text/javascript">
 window.$zopim||(function(d,s){var z=$zopim=function(c){z._.push(c)},$=z.s=
 d.createElement(s),e=d.getElementsByTagName(s)[0];z.set=function(o){z.set.
@@ -197,7 +197,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 <!--main nav part starts here-->
 <div class="red-part">
     <div class="left">Step to Quality Customer Care.</div>
-  <div class="right">United States + 1 866-581-0038 </div>
+  <div class="right">United States - 1-866-581-0038 </div>
     <div class="clr"></div>
 </div>
 <!--main nav part ends here-->
@@ -574,7 +574,7 @@ function callbackvalidation()
 							Canada
 							</p>
 <!--<p><strong>United Kingdom</strong>&nbsp;+ 44 800-097-5680 </p>-->
-            <p>+ 1 866-581-0038 </p>
+            <p>1-866-581-0038 </p>
             <p class="map"><img src="images/footer-map.png" alt=" "></p>
 			<div class="social">
     <ul id="social-top" class="invent-social-list">
