--- a/a/al/alt/alteregoapp.com.html
+++ b/a/al/alt/alteregoapp.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the alteregoapp.com privacy policy that was archived on 2013-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130606032427id_/https%3A//alteregoapp.com/legal/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alteregoapp.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216164443id_/https%3A//alteregoapp.com/legal/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
     <title>Privacy Policy | AlterEgo</title>
@@ -39,6 +39,8 @@
         });
     </script>
     <script type="text/javascript" src="/js/adapt.min.js"></script><link rel="stylesheet" href="/css/960.css">
+    <script type="text/javascript" src="/js/promise.js"></script>
+    <script type="text/javascript" src="/js/alterego.js"></script>
     <!-- Google Analytics -->
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
@@ -120,7 +122,7 @@
     <div id="footer" class="container_8 smaller">
         <div class="alpha above-below15">
             AlterEgo is brought to you by the folks that make <a href="http://mailchimp.com/?utm_source=alterego&amp;utm_medium=internal_ad&amp;utm_content=footer%2Blink&amp;utm_campaign=Brought%2Bto%2Byou%2Bby%2BMailChimp">MailChimp</a>.<br>
-            © 2011-2013 The Rocket Science Group. All rights reserved.
+            © 2011-2014 The Rocket Science Group. All rights reserved.
         </div>
         <div id="footerlinks" class="above-below15">
             <ul class="linear-list alignc">
