--- a/m/my/myc/myclassboard.com.html
+++ b/m/my/myc/myclassboard.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myclassboard.com privacy policy that was archived on 2013-05-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130529100524id_/http%3A//www.myclassboard.com/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myclassboard.com privacy policy that was archived on 2014-02-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140216175441id_/http%3A//www.myclassboard.com/privacy_policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -54,16 +54,14 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 <li><a href="SignIn.aspx">Sign In</a></li>
 <li style="border-right:none;"><a href="mcbonlinepay.aspx">Buy Now</a></li>
 </ul>
-<div class="freetry">  <a href="mcbtrial.aspx"><img src="images/try30_days_free.gif" style="margin:45px 0 0 0px" width="332" height="42"></a></div>
+
+<a href="mcbtrial.aspx"><img src="images/try30_days_free.gif" style="margin:45px 0 0 20px" width="332" height="42"></a>
 </div>
 <div class="cle"></div>
 </div>
 <div class="uptabs">
   <div>
     <ul id="ldd_menu" class="ldd_menu">
-      <li> <span><a style="color:#333333;" href="index.aspx">Home</a></span>
-          <!-- Increases to 510px in width-->
-      </li>
       <li> <span style="width:70px; background:url(images/blue.jpg) repeat-x; color:#FFFFFF;">About Us</span> </li>
       <li> <span>Products</span>
           <div class="ldd_submenu" style="width:1085px; left:-250px;">
@@ -110,26 +108,17 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
             <a class="ldd_subfoot" href="products-overview.html">+  Myclassboard products </a> </div>
       </li>
       <li> <span style="width:110px;">Whom we serve</span>
-          <div class="ldd_submenu" style="width:500px">
-            <ul>
+          <div class="ldd_submenu" style="width:250px">
+            <ul style="border-right:none;">
               <li class="ldd_heading">Schools</li>
               <li><a href="customers-page-schools.html">Overview</a></li>
               <li><a href="ib-school-software.html">IB Schools</a></li>
               <li><a href="cbse-school-software.html">CBSE Schools</a></li>
               <li><a href="icse-school-software.html">ICSE Schools</a></li>
               <li><a href="ssc-school-software.html">SSC Schools</a></li>
+              <li style="font-size:20px;"><a href="customer-testimonials.html" style="font-size:18px;">Customer Testimonials</a></li>
             </ul>
-            <ul>
-              <li class="ldd_heading">Colleges</li>
-              <li><a href="customers-page-colleges.html">Overview</a></li>
-            </ul>
-            <ul style="border-right:none;">
-              <li class="ldd_heading">Universities</li>
-              <li><a href="customers-page-universities.html">Overview</a></li>
-            </ul>
-            <ul style="border-right:none; font-size:20px;">
-              <li><a href="customer-testimonials.html" style="font-size:18px;">Customer Testimonials</a></li>
-            </ul>
+          
             <a class="ldd_subfoot" href="customers-page-schools.html">+ Who we serve </a> </div>
       </li>
       <li> <span>Services</span>
@@ -208,8 +197,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
     <li><a href="terms_conditions.html">Terms and Conditions</a></li>
     <li><a href="#" style="color:#e93043; background:#fff;">Privacy Policy</a></li>
     <li><a href="refund_cancellations.html">Refund &amp; cancellations</a></li>   
-      </ul>
-      <img src="images/request_live_demo.gif" alt=""> <img src="images/view_online_demo.gif" alt=""> <img src="images/contact_us.gif" alt=""> <img src="images/mcb_videos.gif" alt=""> 
+      </ul> 
 </div>
   <div class="txt">
     <h1>Privacy Policy</h1>
