--- a/s/sp/spa/spawnpoint.com.html
+++ b/s/sp/spa/spawnpoint.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the spawnpoint.com privacy policy that was archived on 2011-10-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20111011114946id_/http%3A//www.spawnpoint.com/about/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the spawnpoint.com privacy policy that was archived on 2014-02-17.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140217025811id_/http%3A//www.spawnpoint.com/about/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <!-- echo 64.34.195.145 -->
@@ -14,16 +14,16 @@
 	
 <!-- styles -->
 	<style type="text/css">
-		@import "http://static.spawnpoint.com/css/spawnpoint/global.css";
-        		    @import "http://static.spawnpoint.com/css/spawnpoint/skin/default.css";
-				@import "http://static.spawnpoint.com/css/ddmenu.css";
- 		@import "http://static.spawnpoint.com/css/spawnpoint/popup.css";
+		@import "http://static2.spawnpoint.com/css/spawnpoint/global.css";
+        		    @import "http://static2.spawnpoint.com/css/spawnpoint/skin/default.css";
+				@import "http://static2.spawnpoint.com/css/ddmenu.css";
+ 		@import "http://static2.spawnpoint.com/css/spawnpoint/popup.css";
                 	</style>
-	<style type="text/css"> 
+	<!-- <style type='text/css'> 
         @import url('//assets0.zendesk.com/external/zenbox/overlay.css');
         a#zenbox_tab { z-index: 2147483641; }
         #zenbox_overlay { z-index: 2147483642; }
-    </style>
+    </style> -->
 	<style type="text/css">
     /* Unable to find a matching skin */
     </style>
@@ -40,21 +40,21 @@
 <script type="text/javascript" src="/js/effects.js"></script>
 <script type="text/javascript" src="/js/controls.js"></script>
 
-	<script type="text/javascript" src="http://static.spawnpoint.com/js/jquery-latest.pack.js"></script>
+	<script type="text/javascript" src="http://static2.spawnpoint.com/js/jquery-latest.pack.js"></script>
 	<script type="text/javascript">
         $j = jQuery.noConflict();
         var documentLoaded = false;
     </script>
-	<script type="text/javascript" src="http://static.spawnpoint.com/js/popup2.js"></script>
-	<script type="text/javascript" src="http://static.spawnpoint.com/js/ddmenu.js"></script>
-	<script type="text/javascript" src="http://static.spawnpoint.com/js/autoheight.js"></script>
-	<script type="text/javascript" src="http://static.spawnpoint.com/js/AjaxRequest.js"></script>
-	<script type="text/javascript" src="http://static.spawnpoint.com/js/tabpage.js"></script>
-	<script type="text/javascript" src="http://static.spawnpoint.com/js/ticker.js"></script>
-	<script type="text/javascript" src="http://static.spawnpoint.com/js/js.js"></script>
+	<script type="text/javascript" src="http://static2.spawnpoint.com/js/boxutil.js"></script>
+	<script type="text/javascript" src="http://static2.spawnpoint.com/js/ddmenu.js"></script>
+	<script type="text/javascript" src="http://static2.spawnpoint.com/js/autoheight.js"></script>
+	<script type="text/javascript" src="http://static2.spawnpoint.com/js/AjaxRequest.js"></script>
+	<script type="text/javascript" src="http://static2.spawnpoint.com/js/tabpage.js"></script>
+	<script type="text/javascript" src="http://static2.spawnpoint.com/js/ticker.js"></script>
+	<script type="text/javascript" src="http://static2.spawnpoint.com/js/js.js"></script>
 	
 <!-- misc -->
-	<link rel="shortcut icon" href="http://static.spawnpoint.com/img/spawnpoint/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="http://static2.spawnpoint.com/img/spawnpoint/favicon.ico" type="image/x-icon">
 	<link rel="alternate" type="application/rss+xml" title="SpawnPoint - Games" href="http://www.spawnpoint.com/Platform/rss_profiles">
 	<link rel="alternate" type="application/rss+xml" title="SpawnPoint - News" href="http://www.spawnpoint.com/Platform/rss_news">
 	<link rel="alternate" type="application/rss+xml" title="SpawnPoint - Downloads" href="http://www.spawnpoint.com/Platform/rss_files">
@@ -65,7 +65,7 @@
 
 <!-- Google AdManager -->    
     
-    <script type="text/javascript" src="http://partner.googleadservices.com/gampad/google_service.js">
+    <script type="text/javascript" src="http://static2.spawnpoint.com/js/google_service.js">
     </script>
 	<script type="text/javascript">
 	  GS_googleAddAdSenseService('ca-pub-7095065451497641');
@@ -109,7 +109,7 @@
       <div id="topbar" class="center clearfix">
         <div class="left">
           <!-- ==== POWERED BY ===== -->
-            <a href="http://www.peer1.com/" class="powered-by"><span>Powered by PEER 1</span></a>          <!-- test -->
+            <a href="http://www.peer1.com/hosting/enterprise-online-gaming-rich-media" class="powered-by"><span>Powered by PEER 1</span></a>          <!-- test -->
         
           <ul id="directory" class="clearfix">
             <li><strong>Game Directory</strong></li>
@@ -503,7 +503,7 @@
 					</li>
 				</ul>
 				<ul class="dropdown section right clear">
-					<li class="store"><a href="http://www.spawnpoint.com/store"><span>Store</span></a></li>
+					<!-- <li class="store"><a href="http://www.spawnpoint.com/store"><span>Store</span></a></li> -->
 					<li class=""><a class="" href="http://www.spawnpoint.com/downloads">Downloads</a></li>
 					<li><a href="http://www.spawnpoint.com/videos">Videos</a></li>
 					<li><a href="http://www.spawnpoint.com/News">News</a>
@@ -529,7 +529,7 @@
 							                                </ul>
                         </div>
 					</li>
-                                        <li><a href="https://support.reachgaming.com/">Support</a></li>
+                                        <!-- <li><a href="https://support.reachgaming.com/">Support</a></li> -->
                     				</ul>
 			</div>
 		</div>
@@ -543,9 +543,8 @@
     <div id="container">
 
       <div class="advt advt01 clearfix">
-
-
-        <div class="button-1">
+		
+		<div class="button-1">
 
         <script type="text/javascript">
   			GA_googleFillSlot("SpawnPoint_Internal_220x90");
@@ -556,9 +555,8 @@
 <script language="javascript"><!--
 document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/1172351/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];cookie=info;misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/1172351/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];cookie=info;misc=1580447404750"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/1172351/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/1172351/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="728" height="90"></a></noscript>
+</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/1172351/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];cookie=info;misc=1580447399085"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/1172351/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/1172351/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="728" height="90"></a></noscript>
 <!-- End of JavaScript Tag --></div>
-
 
       </div>
 
@@ -674,7 +672,7 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/
 											            <li><a href="http://www.phxxgaming.com/" rel="nofollow"> PHXX Gaming Services </a> |</li>
             <li><a href="http://www.serverbeach.com/"> Dedicated Servers </a> |</li>
             <li><a href="http://www.latencykills.com/"> Dedicated Game Servers </a> |</li>
-            <li><a href="http://www.peer1.com/"> Managed Hosting </a> |</li>
+            <li><a href="http://www.peer1.com/hosting/enterprise-online-gaming-rich-media"> Managed Hosting </a> |</li>
             <li><a href="http://www.simple-share.com/"> Share Files Online </a></li>
 									</ul>
 			</div>
@@ -700,7 +698,7 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/
 		<div class="copyright">
 	
 		<div class="left">
-							<a href="http://www.phxxgaming.com/"><img src="http://static.spawnpoint.com/img/logo_phxxgaming.gif" alt="PHXX Gaming Services" style="border: 0;"></a>
+							<a href="http://www.phxxgaming.com/"><img src="http://static2.spawnpoint.com/img/logo_phxxgaming.gif" alt="PHXX Gaming Services" style="border: 0;"></a>
 					</div>
 	
 		<div class="right">
@@ -1020,24 +1018,12 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/
 <div class="content"><span class="store-span">Please wait ... your order is being processed</span></div></div>
 </div>
 
-<script type="text/javascript" src="http://static.spawnpoint.com/js/corners.js"></script>
+<script type="text/javascript" src="http://static2.spawnpoint.com/js/corners.js"></script>
 <script type="text/javascript">
 if (typeof lightBox == 'function') {
 	jQuery('a.lightbox').lightBox();
 }
 </script>
-
-<!-- ZenDesk -->
-	<script type="text/javascript">
-	var zenbox_params = {};
-	zenbox_params.tab_id = "support";
-	zenbox_params.tab_color = "black";
-	zenbox_params.title = "SpawnPoint";
-	zenbox_params.text = "How may we help you? Please fill in details below, and we'll get back to you as soon as possible.";
-	zenbox_params.tag = "spawnpoint";
-	zenbox_params.url = "support.reachgaming.com";
-	</script>
-	<script type="text/javascript" src="//assets0.zendesk.com/external/zenbox/overlay.js"></script>    
 	
 <script type="text/javascript">
 var _sf_async_config={uid:10236,domain:"spawnpoint.com"};
